--- a/index.html
+++ b/index.html
@@ -237,6 +237,6 @@
         >.
       </div>
     </div>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
